# Shushus

./: .travis.yml  Cargo.toml  readme.md
crates/shushus-github/: Cargo.toml  readme.md
crates/shushus-github/src/: lib.rs
crates/shushus-oauth2/: Cargo.toml  readme.md
crates/shushus-oauth2/src/: config.rs  error.rs  http.rs  lib.rs  oauth.rs  states.rs
crates/shushus-rocketrs/: Cargo.toml  readme.md
crates/shushus-rocketrs/src/: lib.rs
examples/: oauth2-rocket.rs
src/: lib.rs
src/redirection/: mod.rs
