[package]
name = "shushus"
version = "0.1.0"

authors = ["LightDiscord <root@arnaud.sh>"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/LightDiscord/Shushus"
description = "Authentication for Rust"

[dependencies]
http = "0.1.13"

[workspace]
members = [
    "./",

    "crates/shushus-oauth2",
    "crates/shushus-github",

    "crates/shushus-rocketrs",
]

[dev-dependencies]
rocket = "0.4.0-rc.1"
futures = "0.1"
tokio = "0.1"
failure = "0.1.3"
shushus-oauth2 = { path = "crates/shushus-oauth2" }
shushus-rocketrs = { path = "crates/shushus-rocketrs" }
shushus-github = { path = "crates/shushus-github" }
rocket-futures = { git = "https://github.com/LightDiscord/rocket-futures" }
